--- a/Styles/index.css
+++ b/Styles/index.css
@@ -38,6 +38,7 @@ body {
     color: white;
     line-height: 23px;
     margin-bottom: 15px;
+    width: 430px;
 }
 .variable button {
     padding: 12px 55px 12px 55px;
